<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="12dp"
    android:paddingHorizontal="24dp"
    tools:context=".screens.detail.DetailActivity">

  <include
      android:id="@+id/empty_view"
      layout="@layout/view_common_empty"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"/>

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/content"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_image"
            android:layout_width="150dp"
            android:layout_height="0dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toTopOf="@id/container_information"
            app:layout_constraintBottom_toBottomOf="@id/container_information"
            app:layout_constraintStart_toStartOf="parent">

          <ImageView
              android:id="@+id/image"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:scaleType="fitXY"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              tools:src="@color/black"
              tools:ignore="ContentDescription" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/container_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_image"
            app:layout_constraintEnd_toEndOf="parent">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/height"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
              android:gravity="center_horizontal" />

          <TextView
              android:id="@+id/height"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
              android:gravity="center_horizontal"
              tools:text="1 meter" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="4dp"
              android:text="@string/weight"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
              android:gravity="center_horizontal" />

          <TextView
              android:id="@+id/weight"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
              android:gravity="center_horizontal"
              tools:text="1 kg" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="4dp"
              android:text="@string/base_experiences"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
              android:gravity="center_horizontal" />

          <TextView
              android:id="@+id/base_experiences"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
              android:gravity="center_horizontal"
              tools:text="24" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="4dp"
              android:text="@string/types"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
              android:gravity="center_horizontal" />

          <TextView
              android:id="@+id/types"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
              android:gravity="center_horizontal"
              tools:text="Grass | Ground" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="4dp"
              android:text="@string/abilities"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
              android:gravity="center_horizontal" />

          <TextView
              android:id="@+id/abilities"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
              android:gravity="center_horizontal"
              tools:text="Grass | Ground" />

        </LinearLayout>

        <TextView
            android:id="@+id/label_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/stats"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintTop_toBottomOf="@id/card_image"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/label_stats"
            tools:listitem="@android:layout/simple_list_item_1"
            tools:itemCount="2"/>

        <TextView
            android:id="@+id/label_moves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/moves"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_stats"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_moves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:nestedScrollingEnabled="false"
            app:spanCount="2"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/label_moves"
            tools:listitem="@android:layout/simple_list_item_1"/>

      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>